src/html/gsa-style.css
/*
 * Greenbone Security Assistant
 * $Id$
 * Description: HTML stylesheet
 *
 * Authors:
 * Matthew Mundell <matthew.mundell@greenbone.net>
 * Karl-Heinz Ruskowski <karl-heinz.ruskowski@greenbone.net>
 * Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 *
 * Copyright:
 * Copyright (C) 2009-2013 Greenbone Networks GmbH
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 2,
 * or, at your option, any later version as published by the Free
 * Software Foundation
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 */

body {
 background-color: #FFFFFF;
 margin: 0px;
 font: small Verdana, sans-serif;
 font-size: 12px;
 color: #1A1A1A;
}

a:link {
 color: blue;
 text-decoration: none;
}

a:hover, a:focus {
 color: blue;
 text-decoration: underline;
}

.footnote {
 font-size:10px;
 color: #787878;
 text-align:left;
}

.footnote a {
 font-size:10px;
 color: #787878;
 text-decoration: none;
}

.footnote a:hover {
 font-size:10px;
 color: #787878;
 text-decoration: underline;
}

.footnote a:focus {
 font-size:10px;
 color: #787878;
 text-decoration: underline;
}

img {
 border: 0px;
}

h1 {
 font-size: 20px;
}

h2 {
 font-size: 18px;
}

h3 {
 font-size: 16px;
}

h4 {
 font-size:14px;
 margin-bottom:0px;
}

form {
 font-size: 12px;
}

table {
 font-size: 12px;
}

.envelope {
 width: 98%;
 max-width:900px;
}

p {
 margin-left:5px;
}

.actionbar {
 background-color: #1A1A1A;
 height: 77px;
 border-top: 3px solid #70C000;
 border-left: 3px solid #70C000;
 padding-top:3px;
 padding-left:3px;
}

.task {
 background-color: #FFFFFF;
 height: 50px;
 padding: 5px;
}

.task_odd {
 background-color: #d5d5d5;
 margin-top: 1px;
 height: 50px;
 padding: 5px;
}

.error {
  text-align: center;
  background-color: #FFFF99;
  border: 3px solid #CC0000;
  margin: 10px;
}

div.float_right {
  float: right;
}

div.diff-line {
 white-space: pre;
 font-family: monospace;
}

div.diff-line-hunk {
 white-space: pre;
 font-family: monospace;
 color: #9932CC;
}

div.diff-line-plus {
 white-space: pre;
 font-family: monospace;
 color: #006400;
}

div.diff-line-minus {
 white-space: pre;
 font-family: monospace;
 color: #B22222;
}

/* BEGIN Risk factor colouring */

div.Critical {
 background-color: #FF0000;
}

div.High {
 background-color: #FF6666;
}

div.Medium {
 background-color: #FFAAAA;
}

div.Low {
 background-color: #FFDDDD;
}

div.None {
 background-color: #FFEEEE;
}

/* BEGIN Greenbone Progress Bar */

.progressbar_box {
 margin-left:0px;
 margin-top:0px;
 float:left;

 height:12px;
 width:100px;
 background: #454545 url('img/p_bar_bg.png');
 vertical-align:middle;
 text-align:center;
 border:1px solid #999999;
}

.progressbar_bar {
 height:12px;
 background:#70C000 url('img/p_bar.png');
}

.progressbar_bar_done {
 height: 12px;
 background:#CCCCCC url('img/p_bar_done.png');
}

.progressbar_bar_new {
 height: 12px;
 background: #df8e31 url('img/p_bar_new.png');
}

.progressbar_bar_error {
 height: 12px;
 background: #bd3309 url('img/p_bar_error.png');
}

.progressbar_bar_request {
 height: 12px;
 background: #bd8634 url('img/p_bar_request.png');
}

.progressbar_text {
 z-index:3;
 position:relative;
 top:-12px;
 font-weight:bold;
 color:#FFFFFF;
 font-size:9px;
}

/* END Greenbone Progress Bar */

/* BEGIN Greenbone Tables */

table.gbntable {
    text-align:left;
    width: 100%;
    margin-bottom: 20px;
}

.gbntable th {
 background-color: #70C000;
}

/* green row */
.gbntablehead1 td{
 text-align: left;
 background-color: #70C000;
 color: #FFFFFF;
 font-weight: bold;
}

/* dark grey row */
.gbntablehead2 td {
 text-align:left;
 background-color: #3A3A3A;
 color: #FFFFFF;
 font-weight: bold;
}

.gbntablehead2 a {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: none;
}

.gbntablehead2 a:hover {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: underline;
}

.gbntablehead2 a:focus {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: underline;
}

tr.odd {
 text-align:left;
 background-color: #EEEEEE;
}

tr.odd:hover {
 background: #DDDDDD;
}

tr.even:hover {
 background: #DDDDDD;
}

tbody.odd {
 text-align:left;
 background-color: #EEEEEE;
}

tbody.odd:hover {
 background: #DDDDDD;
}

tbody.even:hover {
 background: #DDDDDD;
}

table.odd {
 background-color: #EEEEEE;
}

/* END Greenbone Tables */

/* BEGIN Window decorations */

.gb_window {
}

.gb_window_part_left {
 background: url('img/style/window_dec_a.png') no-repeat;
 width:6px;
 height:32px;
 float:left;
 margin:0px;
}

.gb_window_part_center {
 background: url('img/style/window_dec_b.png') repeat-x;
 height: 32px;
 background-color: #70C000;
 color: #FFFFFF;
 font-weight: bold;
 padding-top:5px;
 text-align:left;
 margin:0px;
 font-size:13px;
}

.gb_window_part_right {
 background: url('img/style/window_dec_c.png') no-repeat;
 width: 76px;
 height: 32px;
 float: right;
 margin:0px;
}

.gb_window_part_content {
 background: #f9f9f9;
 border: 1px solid #7c7c7c;
 border-top: none;
 padding: 5px;
 text-align: left;
 position:relative;
 top:-5px;
 font-size:12px;
}

.gb_window_part_content_no_pad {
 background: #f9f9f9;
 border: 1px solid #7c7c7c;
 border-top: none;
 position:relative;
 top:-5px;
}

.gb_window_error {
}

.gb_window_part_left_error {
 background: url('img/style/window_dec_a_error.png') no-repeat;
 width:6px;
 height:32px;
 float:left;
 margin:0px;
}

.gb_window_part_center_error {
 background: url('img/style/window_dec_b_error.png') repeat-x;
 background-color: #CC0000;
 height: 32px;
 color: #FFFFFF;
 font-weight: bold;
 padding-top:5px;
 text-align:left;
 margin:0px;
 font-size:13px;
}

.gb_window_part_right_error {
 background: url('img/style/window_dec_c_error.png') no-repeat;
 width: 76px;
 height: 32px;
 float: right;
 margin:0px;
}

.gb_window_part_content_error {
 background: #fffac7;
 border: 1px solid #7c7c7c;
 border-top: none;
 padding: 5px;
 text-align: left;
 position:relative;
 top:-5px;
 font-size:12px;
}

/* END Window decorations */

/* Menu Bar */
#gb_menu {

}

#gb_menu ul {
 list-style: none;
 margin: 0px;
 padding: 0px;
}

#gb_menu ul li {
 float:left;
}

#gb_menu ul li a {
 display: block;
 width: 128px;
 height: 35px;
 background: url('img/style/top_menu_buttons.png');
 background-position: -130px 0px;
 line-height: 35px;
 font-size: 10px;
 color: #FFFFFF;
 text-decoration: none;
 font-weight: bold;
}

#gb_menu ul .first_button > a {
 width: 130px;
 background-position: 0px 0px;
}

#gb_menu ul .first_button:hover a {
 background-position: 0px -35px;
}

#gb_menu ul .last_button > a {
 width: 130px;
 background-position: -258px 0px;
}

#gb_menu ul .last_button:hover a {
 background-position: -258px -35px;
}

#gb_menu ul li:hover a {
 background-position: -130px -35px;
}

#gb_menu ul li ul {
 width: 255px;
 z-index: 6;
 list-style: none;
 position: absolute;
 margin-top: -1px;
 display:none;
 background: #FAFAFA;
 border: 1px solid #3A3A3A;
 -webkit-border-radius: 0px 0px 8px 8px;
 -moz-border-radius: 0px 0px 8px 8px;
 border-radius: 0px 0px 8px 8px;
}

#gb_menu ul li ul a {
 background: none;
 line-height: 22px;
 text-align: left;
 text-indent: 12px;
 color: #3A3A3A;
 width: 255px;
 height: 22px;
}

#gb_menu ul li ul .indent a {
 background: none;
 line-height: 22px;
 text-align: left;
 text-indent: 25px;
 color: #3A3A3A;
 width: 255px;
 height: 22px;
}

#gb_menu ul li ul a:hover {
 background: #99CE48;
}

#gb_menu ul li ul .last a:hover {
 background: #99CE48;
 -webkit-border-radius: 0px 0px 8px 8px;
 -moz-border-radius: 0px 0px 8px 8px;
 border-radius: 0px 0px 8px 8px;
}

#gb_menu .pointy {
 background: url('img/style/menu_pointy.png');
 display: block;
 width: 17px;
 height: 15px;
 margin-top: -14px;
 margin-left: 25px;
}

#gb_menu li:hover ul ul,
#gb_menu li:hover ul ul ul {
 display: none;
}

#gb_menu li:hover a,
#gb_menu li:hover ul,
#gb_menu li:hover ul li {
 display: block;
}

/* Logo Bar */

.logo_l {
 float:left;
 margin:0px;
}

.logo_l img {
 margin-top: 0px;
}

.logo_l a {
}

.logo_r {
 float:right;
 height: 51px;
 width: 9px;
 background: url('img/style/logo_r.png')
}

.logo_m {
 height: 51px;
 background: url('img/style/logo_m.png')
}

/* Logout panel */
.logout_panel {
 color:#FFFFFF;
 float:right;
 margin: 3px;
 vertical-align:top;
}

.logout_panel a {
 color: #FFFFFF;
}

/* Status panel */
.status_panel {
 color:#FFFFFF;
 float:right;
 margin: 3px;
 margin-right: 15px;
 vertical-align:top;
}

/* Miniicons */
.mini_i {
 float:left;
 margin-right:3px;
}

/* BEGIN Navigation */

#nav ul {
 text-align:left;
 font-size:12px;
 list-style:none;
 padding:0px;
 margin: 0px;
}

#nav li {
 padding:3px;
 text-align:left;
 padding-left:12px;
 margin-left:2px;
 color: #313131;
 font-weight:bold;
 background:url('img/bullet.png') no-repeat 0px 6px #f9f9f9;
}

#nav a {
 display:block;
 text-align:left;
 color: #313131;
 font-weight:bold;
}

#nav a:hover {
}

#nav li li {
 background:url('img/bullet2.png') no-repeat 0px 8px #EEEEEE;
 text-align:left;
}

#nav li li a {
}

/* END Navigation */

/* BEGIN Lists */

#list ul {
 list-style:none;
 padding:0px;
 margin: 0px;
 padding-left:4px;
 margin-left:18px;
}

#list li {
 padding:4px;
 padding-left:13px;
 margin-left:8px;
 background:url('img/bullet.png') no-repeat 0px 9px;
 border:0px;
}

#list li li {
}

#list a {
}

/* END Lists */

#download ul {
 font-size:12px;
 list-style:none;
 padding:0px;
 margin: 0px;
}

#download li {
}

#download a {
 padding:8px;
 padding-left:21px;
 margin-left:8px;
 background:url('img/download.png') no-repeat 0px 9px;
}

/* Small Form */

#small_form select {
 font-size: 10px;
}

#small_form input {
 font-size: 10px;
 vertical-align: middle;
}

#small_inline_form select, #small_inline_form input {
 font-size: 10px;
}

#small_inline_form form {
 display: inline;
}

.threat_info_table {
text-align:right;
}

.threat_info_table_h {
 text-align: center;
}

/* Footer */
.gsa_footer {
 font-size:10px;
 text-align:right;
 color: #787878;
 margin-bottom:10px;
 margin-right:5px;
}

.gsa_footer a {
 color: #787878;
}

/* Issue Box */
.issue_box_head {
 padding:4px;
 margin:3px;
 margin-bottom:0px;
 background: #3a3a3a;
 color: #FFFFFF;
 border:1px solid #CCCCCC;
 border-bottom:0px;
}

/* Links in Issue Box shall be white */
.issue_box_head a {
  color: #FFFFFF;
}

.issue_box_box {
 background: #f9f6e8;
 border:1px solid #CCCCCC;
 border-top:0px;
 margin:3px;
 margin-top:0px;
 margin-bottom:0px;
 padding:3px;
}

.note_box_box {
 background: #ffff90;
 border:1px solid #CCCCCC;
 border-top:0px;
 margin:3px;
 margin-top:0px;
 margin-bottom:0px;
 padding:3px;
}

.note_top_line {
 background: #ffff90;
 border:1px solid #CCCCCC;
 border-top:0px;
 margin:3px;
 margin-top:0px;
 margin-bottom:0px;
 padding:3px;
 padding-top:0px;
 padding-bottom:0px;
}

.override_box_box {
 background: #ffff90;
 border:1px solid #CCCCCC;
 border-top:0px;
 margin:3px;
 margin-top:0px;
 margin-bottom:0px;
 padding:3px;
}

.override_top_line {
 background: #ffff90;
 border:1px solid #CCCCCC;
 border-top:0px;
 margin:3px;
 margin-top:0px;
 margin-bottom:0px;
 padding:3px;
 padding-top:0px;
 padding-bottom:0px;
}

